# patriota-agent

./: .dockerignore  .gitignore  Dockerfile.hermes  Dockerfile.tools  USAGE.md  docker-compose.yml  pyproject.toml
config/: sources.yaml
deploy/: install.sh  patriota-gateway.service
fixtures/outlets/: ambito.json  clarin.json  cronista.json  infobae.json  iproup.json  lanacion.json  medio_1.json  medio_2.json  medio_3.json  medio_4.json  medio_5.json  tn.json
fixtures/twitter/: timeline.json  trends.json
hermes/: AGENTS.md  config.yaml
hermes/cron/: seed-jobs.md
hermes/prompts/: editorial.md  filtering.md  twitter.md
hermes/scripts/: source-freshness.sh  start-gateway.sh
hermes/skills/editorial-flow/: SKILL.md
hermes/skills/skill-builder/: SKILL.md
hermes/skills/twitter-flow/: SKILL.md
hermes/skills/weekly-summary/: SKILL.md
patriota_tools/: __init__.py  config.py  install_mcp.py  server.py
patriota_tools/adapters/: __init__.py  cms.py  twitterapi.py
patriota_tools/scrapers/: __init__.py  base.py  outlets.py
patriota_tools/storage/: __init__.py  db.py
